Index: more readable formatting

--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
 				<h2>Masová varianta</h2>
 				<ul>
 					<li>
-						<a href="Masova-varianta/index-level1-lehci.html"
-							>Lehčí (předpřipravené HTML)</a
-						>
+						<a href="Masova-varianta/index-level1-lehci.html">Lehčí (předpřipravené HTML)</a>
 					</li>
 					<li>
-						<a href="Masova-varianta/index-level2-tezsi.html"
-							>Těžší (dopiš HTML)</a
-						>
+						<a href="Masova-varianta/index-level2-tezsi.html">Těžší (dopiš HTML)</a>
 					</li>
 				</ul>
 			</li>
@@ -27,14 +23,10 @@
 				<h2>Veganská varianta</h2>
 				<ul>
 					<li>
-						<a href="Veganska-varianta/index-level1-lehci.html"
-							>Lehčí (předpřipravené HTML)</a
-						>
+						<a href="Veganska-varianta/index-level1-lehci.html">Lehčí (předpřipravené HTML)</a>
 					</li>
 					<li>
-						<a href="Veganska-varianta/index-level2-tezsi.html"
-							>Těžší (dopiš HTML)</a
-						>
+						<a href="Veganska-varianta/index-level2-tezsi.html">Těžší (dopiš HTML)</a>
 					</li>
 				</ul>
 			</li>
