--- a/Masova-varianta/index-level1-lehci.html
+++ b/Masova-varianta/index-level1-lehci.html
@@ -7,6 +7,9 @@
         <title>Recepty</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:600,800&amp;subset=latin-ext" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     </head>
     <body>
 
@@ -18,7 +21,7 @@
                     <div class="recept-kategorie">Grilování</div>
                     <div class="recept-komentare">5 komentářů</div>
                 </div>
-                <h2 class="recept-nazev">Domácí hovězí burger</h2>
+                <h2 class="recept-nazev-hlavni">Domácí hovězí burger</h2>
             </div>
 
             <div class="recepty">
